added links in the contact section, corrected responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
             <div>
-                <img src="./profile.png" alt="Profile picture of Daniel Avzaradel">
+                <img src="./profile.png" alt="Profile picture">
                 <h1>DANIEL AVZARADEL</h1><hr>
                 <h2>JavaScript Full Stack Developer</h2>
                 <br>
@@ -54,11 +54,11 @@
                 <hr>
                 <br>
                 <ul id="contact">
-                    <li><i class="fas fa-mobile-alt"></i>(+972) 052-6217705</li>
-                    <li><i class="fas fa-envelope-open-text"></i>daniel.avzaradel@gmail.com</li>
-                    <li><i class="fab fa-facebook-square"></i>facebook.com/daniel.avzaradel</li>
-                    <li><i class="fab fa-linkedin"></i>linkedin.com/in/daniel-avzaradel/</li>
-                    <li><i class="fab fa-github"></i>github.com/daniel-avzaradel</li>
+                    <li><a href="tel:+972 052-6217705"><i class="fas fa-mobile-alt"></i>(+972) 052-6217705</a></li>
+                    <li><a href="mailto:daniel.avzaradel@gmail.com"><i class="fas fa-envelope-open-text"></i>daniel.avzaradel@gmail.com</a></li>
+                    <li><a href="https://www.facebook.com/daniel.avzaradel" target="_blank"><i class="fab fa-facebook-square"></i>facebook.com/daniel.avzaradel</a></li>
+                    <li><a href="https://www.linkedin.com/in/daniel-avzaradel" target="_blank"><i class="fab fa-linkedin"></i>linkedin.com/in/daniel-avzaradel</a></li>
+                    <li><a href="https://www.github.com/daniel-avzaradel" target="_blank"><i class="fab fa-github"></i>github.com/daniel-avzaradel</a></li>
                 </ul>
                 <br><br>
                 <h3>Education</h3>
